index.css
/* CSS Document */
/* montserrat-regular - latin */
@font-face {
	font-family: 'Montserrat';
	font-style: normal;
	font-weight: 400;
	src: local(''),
		 url('fonts/montserrat-v15-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
		 url('fonts/montserrat-v15-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
  }
  
  /* montserrat-600 - latin */
  @font-face {
	font-family: 'Montserrat';
	font-style: normal;
	font-weight: 600;
	src: local(''),
		 url('fonts/montserrat-v15-latin-600.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
		 url('fonts/montserrat-v15-latin-600.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
  }

html {
	scroll-behavior: smooth;
}

body {
	background-color: #121414;
	overflow: auto;
}

h1 {
	text-align: center;
}

#logo {
	position: fixed;
	left: 50%;
	top: 50%;
	transform: translate(-50%, -50%);
	transform-origin: left top;
	width: 50%;
	transition: left 1s, top 1s, width 1s, opacity 300ms;
}

#logo_disapear {
	opacity: 100%;
	transition: all 0.4s ;
}

#logo_H {
	transition: all 1s;
}

#scroll_arrows {
	position: fixed;
	left: 50%;
	bottom: 5%;
	transform: translate(-50%, 0%);
	transform-origin: center;
	width: 50px;
	transition: all 0.5s;
}

#scroll_arrows:hover {
	cursor: pointer;
	transform: translate(-50%, 0%) scale(120%);
}

#about {
	position: fixed;
	left: -30px;
	bottom: 30px;
	transform: rotate(-90deg) translate(0, 100%);
	font-family: 'Montserrat', serif;
	font-weight: 600;
	font-size: 20px;
	color: #BA1A1A;
	background-image: linear-gradient( #BA1A1A, #BA1A1A);
	transition: transform 1s, left 1s, bottom 1s, font-size 1s, background-size 500ms;
}

#about_text {
	font-family: 'Montserrat', serif;
	font-weight: normal;
	font-size: 20px;
	color: #E3E5E5;
	position: fixed;
	padding-bottom: 64px;
	top: 100%;
	left: 50%;
	transform: translateX(-50%);
	width: 50%;
	text-align: justify;
	transition: all 1s;
}

#youtube {
	right: 70%;
}

#youtube_content {
	position: fixed;
	width: 80%;
	top: 100%;
	left: 50%;
	padding-bottom: 64px;
	transition: top 1s;
	transform: translateX(-50%)

}

#instagram {
	right: 50%;
}

#github {
	right: 30%;
}

.video {
	padding: 32px;
	width: calc(33% - 64px);
	height: 12vw;
}

.animated_underline {
	background-size: 0 3px;
	background-position: 0 100%;
	background-repeat: no-repeat;
	transition: background-size 500ms;
}

.animated_underline:hover {
	cursor: pointer;
	background-size: 100% 3px;
}

.social_media {
	position: fixed;
	top: 100%;
	transform: translate(50%, -50%);
	font-family: 'Montserrat', serif;
	font-weight: 600;
	font-size: 30px;
	color: #E8911A;
	transition: right 1s, top 1s, font-size 1s, transform 1s, background-size 500ms, opacity 300ms;
	background-image: linear-gradient( #E8911A, #E8911A);
}

.unselectable {
	-webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
	user-select: none;
}

.link {
	color: #B1CBCA;
	background-image: linear-gradient( #B1CBCA, #B1CBCA);
	text-decoration: none;
}

.link_dark {
	color: #E8911A;
	background-image: linear-gradient( #E8911A, #E8911A);
	text-decoration: none;
}

@media screen and (max-width: 780px){
	#logo {
		width: 80%;
	}

	#about_text {
		width: 70%;
	}

	#youtube_content {
		width: 70%;
	}

	.video {
		padding-left: 0;
		padding-right: 0;
		width: 100%;
		height: 38vw;
	}

	
}

@media screen and (max-width: 1000px) {
	#youtube {
		right: 50%;
	}

	#instagram {
		right: 50%;
	}

	#github {
		right: 50%;
	}
}

@media screen and (min-width: 780px) and (max-width: 1450px) {
	.video {
		width: calc(49% - 64px);
		height: 18vw;
	}
}

